--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+**/*.xcodeproj/*
+*.xml
+**/.idea/*
+lib/*
+**/*.pbxproj
+
+
 # Prerequisites
 *.d
 
@@ -50,3 +57,4 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+*.pbxproj
